Fix vertical alignment of `progress`

--- a/src/assets/sass/core/_base.scss
+++ b/src/assets/sass/core/_base.scss
@@ -22,9 +22,11 @@ template {
     display: none;
 }
 
-/* set correct display for `progress` in IE8-9 */
+/* set correct display for `progress` in IE8-9
+   improve vertical alignment of `progress` in Chrome, Firefox, and Opera */
 progress {
     display: inline-block;
+    vertical-align: baseline;
 }
 
 html {
